[#S12P21E202-91][BE] Feat: user 서버와의 연결